--- a/src/public/login-page/login.html
+++ b/src/public/login-page/login.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
-    <link href="signin.css" rel="stylesheet">
+    <link href="login-page/signin.css" rel="stylesheet">
   </head>
 
   <body class="text-center signin-container">
@@ -32,6 +32,6 @@
       <p id="error-message"></p>
     </form>
 
-    <script src="login.js"></script>
+    <script src="login-page/login.js"></script>
   </body>
 </html>
