--- a/src/public/create-request/create-request.html
+++ b/src/public/create-request/create-request.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Page Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="home.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="create-request.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
 </head>
@@ -21,13 +21,14 @@
 
     <div class="collapse navbar-collapse" id="navbarsExample04">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="/home/home.html">Home
-            <span class="sr-only">(current)</span>
           </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/create-request/create-request.html">Request Reimbursement</a>
+        <li class="nav-item active">
+          <a class="nav-link" href="/create-request/create-request.html">Request Reimbursement
+            <span class="sr-only">(current)</span>
+          </a>
         </li>
       </ul>
       <form class="form-inline my-2 my-md-0">
@@ -36,20 +37,28 @@
     </div>
   </nav>
 
-  <div class="container" id="request-table-container">
-    <div class="row">
-      <table class="table table-striped table-dark col" id="request-table">
-        <thead>
-          <tr>
-            <th scope="col">Title</th>
-            <th scope="col">Number Blades</th>
-            <th scope="col">Year</th>
-          </tr>
-        </thead>
-        <tbody id="request-table-body">
+  <div class="container" id="content-container">
+    <div class="row justify-content-center">
+      <form class="form-create-request col-xs-12 col-sm-10 col-md-8 col-lg-6" onsubmit="createRequest(event)">
+        <h1 class="h3 mb-3 font-weight-normal">New Request Info</h1>
+        <label for="input-amount" class="sr-only">Amount</label>
+        <input type="text" id="input-title" class="form-control" placeholder="Amount" required autofocus>
+        <br>
 
-        </tbody>
-      </table>
+        <label for="input-description" class="sr-only">Description</label>
+        <input type="text" id="input-year" class="form-control" placeholder="Description" required autofocus>
+        <br>
+
+        <label for="input-type" class="sr-only">Type</label>
+        <input type="number" id="input-number-blades" class="form-control" placeholder="Type">
+        <br>
+        <div class="container">
+          <div class="row justify-content-center">
+            <button class="btn btn-lg btn-primary btn-block" id="submit-button" type="submit">Submit</button>
+          </div>
+        </div>
+
+      </form>
     </div>
   </div>
 
@@ -63,7 +72,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
   <!-- My Scripts -->
-  <script src="home.js"></script>
+  <script src="create-request.js"></script>
 </body>
 
 </html>
