--- a/src/public/create-request/create-request.html
+++ b/src/public/create-request/create-request.html
@@ -42,15 +42,15 @@
       <form class="form-create-request col-xs-12 col-sm-10 col-md-8 col-lg-6" onsubmit="createRequest(event)">
         <h1 class="h3 mb-3 font-weight-normal">New Request Info</h1>
         <label for="input-amount" class="sr-only">Amount</label>
-        <input type="text" id="input-title" class="form-control" placeholder="Amount" required autofocus>
+        <input type="number" id="input-amount" class="form-control" placeholder="Amount" required autofocus>
         <br>
 
         <label for="input-description" class="sr-only">Description</label>
-        <input type="text" id="input-year" class="form-control" placeholder="Description" required autofocus>
+        <input type="text" id="input-description" class="form-control" placeholder="Description" required autofocus>
         <br>
 
         <label for="input-type" class="sr-only">Type</label>
-        <input type="number" id="input-number-blades" class="form-control" placeholder="Type">
+        <input type="number" id="input-type" class="form-control" placeholder="Type">
         <br>
         <div class="container">
           <div class="row justify-content-center">
