--- a/src/public/home/home.html
+++ b/src/public/home/home.html
@@ -41,9 +41,15 @@
       <table class="table table-striped table-dark col" id="request-table">
         <thead>
           <tr>
-            <th scope="col">Title</th>
-            <th scope="col">Number Blades</th>
-            <th scope="col">Year</th>
+            <th scope="col">ID</th>
+            <th scope="col">Amount</th>
+            <th scope="col">Submitted</th>
+            <th scope="col">Resolved</th>
+            <th scope="col">Description</th>
+            <th scope="col">Author</th>
+            <th scope="col">Resolver</th>
+            <th scope="col">Status</th>
+            <th scope="col">Type</th>
           </tr>
         </thead>
         <tbody id="request-table-body">
