Authorization middleware implemented, as well as local storage clearing on login screen

--- a/src/public/home/home.html
+++ b/src/public/home/home.html
@@ -47,7 +47,7 @@
             <th scope="col">Resolved</th>
             <th scope="col">Description</th>
             <th scope="col">Author</th>
-            <th scope="col">Resolver</th>
+            <th scope="col">Resolver ID</th>
             <th scope="col">Status</th>
             <th scope="col">Type</th>
           </tr>
