--- a/src/public/create-request/create-request.html
+++ b/src/public/create-request/create-request.html
@@ -50,7 +50,12 @@
         <br>
 
         <label for="input-type" class="sr-only">Type</label>
-        <input type="number" id="input-type" class="form-control" placeholder="Type">
+        <select id="input-type" class="custom-select">
+          <option value="1">Lodging</option>
+          <option value="2">Travel</option>
+          <option value="3">Food</option>
+          <option value="4">Other</option>
+        </select>
         <br>
         <div class="container">
           <div class="row justify-content-center">
