--- a/src/public/manage/manage.html
+++ b/src/public/manage/manage.html
@@ -38,6 +38,7 @@
       <table class="table table-striped table-dark col" id="request-table">
         <thead>
           <tr>
+            <th scope="col">Approve</th>
             <th scope="col">ID</th>
             <th scope="col">Amount</th>
             <th scope="col">Submitted</th>
