Managers can now filter table for status. Core functionality finished

--- a/src/public/manage/manage.html
+++ b/src/public/manage/manage.html
@@ -52,7 +52,15 @@
         </tbody>
       </table>
     </div>
+    <select id="sort" class="custom-select">
+      <option value="default">DEFAULT</option>
+      <option value="1">PENDING</option>
+      <option value="2">DENIED</option>
+      <option value="3">APPROVED</option>
+    </select>
   </div>
+
+
 
 
 
