--- a/src/public/home/home.html
+++ b/src/public/home/home.html
@@ -29,6 +29,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/create-request/create-request.html">Request Reimbursement</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/">Logout</a>
+        </li>
       </ul>
     </div>
   </nav>
