--- a/src/public/manage/manage.html
+++ b/src/public/manage/manage.html
@@ -26,6 +26,9 @@
             <span class="sr-only">(current)</span>
           </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/">Logout</a>
+        </li>
       </ul>
     </div>
   </nav>
