--- a/src/public/login-page/login.html
+++ b/src/public/login-page/login.html
@@ -19,12 +19,14 @@
       <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
       <label for="inputUsername" class="sr-only">Username</label>
-      <input type="text" id="inputUsername" class="form-control" placeholder="Username" required autofocus>
+      <input type="text" id="inputUsername" class="form-control" placeholder="Username" autofocus>
       <label for="inputPassword" class="sr-only">Password</label>
-      <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+      <input type="password" id="inputPassword" class="form-control" placeholder="Password">
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      <button class="btn btn-lg btn-block" onclick="toRegister()">Register</button>
       <p id="error-message"></p>
     </form>
+
 
     <script src="login-page/login.js"></script>
   </body>
