--- a/src/public/register-user/register.html
+++ b/src/public/register-user/register.html
@@ -15,9 +15,10 @@
   </head>
 
   <body class="text-center signin-container">
+  <div id="register">
     <form class="form-register" onsubmit="registerUser(event)">
       <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-      <h1 class="h3 mb-3 font-weight-normal">Please register</h1>
+      <h1 class="h3 mb-3 font-weight-normal" id="reg">Please register</h1>
       <label for="inputUsername" class="sr-only">Username</label>
       <input type="text" id="inputUsername" class="form-control" placeholder="Username" required autofocus>
       <label for="inputPassword" class="sr-only">Password</label>
@@ -31,7 +32,19 @@
       <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
       <p id="error-message"></p>
     </form>
+  </div>
 
+  <div class="waveWrapper waveAnimation">
+  <div class="waveWrapperInner bgTop">
+    <div class="wave waveTop" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-top.png')"></div>
+  </div>
+  <div class="waveWrapperInner bgMiddle">
+    <div class="wave waveMiddle" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-mid.png')"></div>
+  </div>
+  <div class="waveWrapperInner bgBottom">
+    <div class="wave waveBottom" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-bot.png')"></div>
+  </div>
+  </div>
     <script src="register.js"></script>
   </body>
 </html>
